# sh00k3ms-toolkit

./: .env  .env.example  .gitignore  LICENSE  README.md  README_sh00k3ms_toolkit.md  api_fuzzer.py  api_fuzzer_results.txt  aws_cred_theft_detector.py  aws_priv_esc_analyzer.py  azure_security_tools.py  build_main.py  cdn_edge_mapper.py  cli.py  cloud_exfil_tester.py  cron_gen.py  csp_analyzer.py  csp_results.txt  deserialization_results.txt  domain_recon.py  endpoint_recon.py  exploit_chain_runner.py  git_push.py  header_analyzer.py  header_results.txt  httpx_scan.sh  ics_scanner.py  iframe_worker_checker.py  iframe_worker_results.txt  iot_scanner.py  js_injector.py  jwt_cracker.py  jwt_secrets_wordlist.txt  k8s_supply_chain_checker.py  lateral_movement.py  loot_indexer.py  main.py  nmap_auto.py  open_redirect_checker.py  payload_server.py  (+19 more)
modules/: reflected_tester.py
nmap_auto/: nmap_auto.py  nmap_auto.py6
payloads/: xss_css_reflected.txt
results/: reflected_results_20250617_152440.csv  reflected_results_20250617_154805.csv
sh00k3ms_toolkit/: cli.py  deserialization_checker.py  domain_recon.py  endpoint_recon.py  jwt_cracker.py
