[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sh00k3ms-toolkit"
version = "0.1.0"
description = "Toolkit for recon/pentest automations by Sh00k3ms"
requires-python = ">=3.10"
authors = [{ name = "Kendall Shook" }]

# Pin or relax as you like
dependencies = [
  "requests==2.32.4",
  "urllib3==2.4.0",
  "certifi==2025.6.15",
  "charset-normalizer==3.4.2",
  "idna==3.10",
  "colorama==0.4.6",
  "rich==13.9.2",
  "click==8.1.7",
  "cron-descriptor==1.4.5",
  "python-dateutil==2.9.0.post0",
  "six==1.17.0",
  "dnspython==2.7.0",
  "python-whois==0.9.5",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "pyjwt==2.9.0",
  "python-nmap==0.7.1",
  "paramiko==3.4.0",
  "scapy==2.5.0",
  "boto3==1.35.21",
  "botocore==1.35.21"
]

[project.scripts]
sh00k3ms = "sh00k3ms_toolkit.cli:main"

[tool.setuptools]
packages = ["sh00k3ms_toolkit"]
